Remove CSS to left-align header, no longer necessary now that page headings have shipped.

--- a/client/my-sites/customer-home/style.scss
+++ b/client/my-sites/customer-home/style.scss
@@ -1,7 +1,4 @@
 .customer-home {
-	&__page-heading {
-		text-align: left !important;
-	}
 	&__confetti {
 	    display: block;
 		width: 320px;
